commit package.json .npmrc

--- a/frontend/.npmrc
+++ b/frontend/.npmrc
@@ -1,2 +1,2 @@
-@devproblems:registry=https://npm.pkg.github.com
+@vinicius-ssantos:registry=https://npm.pkg.github.com
 //npm.pkg.github.com/:_authToken=${DEVPROBLEMS_GITHUB_TOKEN}
